--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -8,7 +8,7 @@
     const cookieBanner = document.querySelector('.cookie-banner');
     const cookieBannerOk = document.querySelector('.cookie-banner__btn--ok');
     const setReadCookiePolicy = () => {
-      document.cookie = `_inv_read_cookie_policy_at=${(new Date).getTime()}; Domain=inventables.com`;
+      document.cookie = `_inv_read_cookie_policy_at=${(new Date).getTime()}; domain=inventables.com; path=/; max-age=31536000`;
     };
     const didReadCookiePolicy = () => {
       return document.cookie.split(';').some(crumb => crumb.trim().startsWith('_inv_read_cookie_policy_at='));
