--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,4 +1,4 @@
-<link rel=icon href="https://easel.com/favicon.ico">
+<link rel=icon href="https://www.inventables.com/favicon_v1.png">
 <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 <link href="https://fonts.googleapis.com/css?family=Space+Mono:400,700" rel="stylesheet">
 <link href='https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700' rel='stylesheet' type='text/css' data-noprefix>
@@ -8,7 +8,7 @@
     const cookieBanner = document.querySelector('.cookie-banner');
     const cookieBannerOk = document.querySelector('.cookie-banner__btn--ok');
     const setReadCookiePolicy = () => {
-      document.cookie = `_inv_read_cookie_policy_at=${(new Date).getTime()}; domain=easel.com; path=/; max-age=31536000`;
+      document.cookie = `_inv_read_cookie_policy_at=${(new Date).getTime()}; domain=inventables.com; path=/; max-age=31536000`;
     };
     const didReadCookiePolicy = () => {
       return document.cookie.split(';').some(crumb => crumb.trim().startsWith('_inv_read_cookie_policy_at='));
