--- a/common/head_tag.html
+++ b/common/head_tag.html
@@ -1,6 +1,32 @@
 <link rel=icon href="https://easel.com/favicon.ico">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+<!-- Bootstrap navbar collapse functionality - minimal version -->
+<script type="text/javascript">
+document.addEventListener('DOMContentLoaded', function() {
+  // Get all navbar toggler buttons
+  const togglers = document.querySelectorAll('.navbar-toggler');
+  
+  togglers.forEach(toggler => {
+    toggler.addEventListener('click', function() {
+      // Get the target from the data-bs-target attribute
+      const targetId = this.getAttribute('data-bs-target');
+      const target = document.querySelector(targetId);
+      
+      // Toggle the show class
+      if (target) {
+        if (target.classList.contains('show')) {
+          target.classList.remove('show');
+          this.setAttribute('aria-expanded', 'false');
+        } else {
+          target.classList.add('show');
+          this.setAttribute('aria-expanded', 'true');
+        }
+      }
+    });
+  });
+});
+</script>
+
 <script type="text/discourse-plugin" version="0.1">
   api.onPageChange((url) => {
     const cookieBanner = document.querySelector('.cookie-banner');
