--- a/common/header.html
+++ b/common/header.html
@@ -16,7 +16,7 @@
             <a href="https://easel.com/#Cabinetmaker" class="nav-link">Cabinetmaker</a>
           </li>
           <li class="nav-item">
-            <a href="https://site.inventables.com/projects/" class="nav-link">Projects</a>
+            <a href="https://easel.com/gallery" class="nav-link">Projects</a>
           </li>
           <li class="nav-item">
             <a href="https://forum.easel.com/" class="nav-link">Forum</a>
